--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,66 @@
-body{
-  font-family: 'Courier New';
+body {
+  font-family: "Courier New";
   font-size: 1em;
   text-align: center;
   color: white;
-  background: #0F2027;  /* fallback for old browsers */  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0f2027; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #2c5364,
+    #203a43,
+    #0f2027
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
-.mainBlock{
+.mainBlock {
   width: 100%;
   max-width: 320px;
   margin: 0.5em auto;
   padding: 1em;
   border: 1px solid black;
-  border-radius: .5em;
+  border-radius: 0.5em;
   height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
-background: rgba(255,255,255,0.2)
-  
-
+  background: rgba(255, 255, 255, 0.2);
 }
-h1{
+h1 {
   font-size: 2em;
 }
-h2{
+h2 {
   font-size: 1.5em;
 }
-.button{
-  font-family: 'Courier New';
+.button {
+  font-family: "Courier New";
   font-size: 1em;
-  background-color: rgba(0, 51, 102,1);
+  background-color: rgba(0, 51, 102, 1);
   color: white;
   margin: 0.5em;
   padding: 0.8em;
-  
+
   border: 1px solid black;
   border-radius: 5px;
   transition-duration: 0.8s;
 }
 
-button.button:hover{
+button.button:hover {
   background-color: rgb(26, 140, 255);
 }
 
-.choice{
+.choice {
   background-color: rgb(26, 140, 255);
 }
-span.choice{
+span.choice {
   background-color: red;
 }
-.blocked{
+.blocked {
   background-color: black;
 }
-.blocked:hover{
+.blocked:hover {
   background-color: black;
 }
 
-
-@media only screen and (max-height: 450px){
+@media only screen and (max-height: 450px) {
   h1 h2 {
     font-size: 1em;
   }
@@ -66,16 +68,17 @@ span.choice{
     padding: 0;
     margin: 0;
   }
-  .mainBlock{
+  .mainBlock {
     margin: auto;
     padding: 0;
   }
 }
-@media only screen and (max-width: 300px){
-  h1, h2 {
+@media only screen and (max-width: 300px) {
+  h1,
+  h2 {
     font-size: 1em;
   }
-  .mainBlock{
+  .mainBlock {
     flex-direction: column;
   }
 }
