--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+html{
+  font-size: 18px;
+}
 body {
   font-family: "Courier New";
   font-size: 1em;
@@ -12,13 +15,12 @@ body {
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .mainBlock {
-  width: 100%;
-  max-width: 320px;
+  width: 75em;
+  max-width: 80%;
   margin: 0.5em auto;
   padding: 1em;
   border: 1px solid black;
   border-radius: 0.5em;
-  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -32,7 +34,7 @@ h2 {
 }
 .button {
   font-family: "Courier New";
-  font-size: 1em;
+  font-size: 1.5em;
   background-color: rgba(0, 51, 102, 1);
   color: white;
   margin: 0.5em;
